tests/valid/parcel-crop.jsonld
{
  "@context": {
    "saref4agri": "https://saref.etsi.org/saref4agri/",
    "foodie": "http://foodie-cloud.com/model/foodie#",
    "geo": "http://www.opengis.net/ont/geosparql#",
    "geojson": "https://purl.org/geojson/vocab#",
    "adv": "https://w3id.org/adv/core#",
    "xsd": "http://www.w3.org/2001/XMLSchema#"
  },
  "@id": "https://test.example.org/parcel/valid-001",
  "@type": "saref4agri:Parcel",
  "adv:externalId": "PARCEL-TEST-001",
  "geo:hasGeometry": {
    "@type": "geojson:Polygon",
    "geojson:coordinates": [[[23.7, 37.9], [23.71, 37.9], [23.71, 37.91], [23.7, 37.91], [23.7, 37.9]]]
  },
  "saref4agri:hasCrop": {
    "@type": "saref4agri:Crop",
    "foodie:cropSpecies": { "@id": "http://aims.fao.org/aos/agrovoc/c_7951" }
  },
  "foodie:cropArea": { "@value": "5.2", "@type": "xsd:decimal" }
}
