tests/invalid/animal-missing-species.jsonld
{
  "@context": {
    "saref4agri": "https://saref.etsi.org/saref4agri/",
    "adv": "https://w3id.org/adv/core#",
    "xsd": "http://www.w3.org/2001/XMLSchema#"
  },
  "@id": "https://test.example.org/animal/invalid-no-species",
  "@type": "saref4agri:Animal",
  "adv:externalId": "ANIMAL-TEST-001",
  "adv:birthDate": { "@value": "2023-03-12", "@type": "xsd:date" }
}
